test/src/e2e_vm_tests/test_programs/should_pass/language/reexport/reexport_paths_external_lib/ext_2_lib/src/lib.sw
library;

pub use ext_2_items::*;
pub use ext_2_items::Items2_Variants::*;
