test/src/e2e_vm_tests/test_programs/should_fail/language/reexport/simple_path_access/src/lib_2.sw
library;

use ::items_2::*;

use ::items_2::Items2_Variants::*;
